[gd_scene load_steps=13 format=3 uid="uid://6ntcukqhlh6s"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cgj5sujadlj8c" path="res://fonts/Roboto-Regular.ttf" id="2"]
[ext_resource type="Script" path="res://NavContainer.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://cqqos7aa3urr4" path="res://images/rect.png" id="5"]
[ext_resource type="Script" path="res://NinePatchRectPanel.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dpu1m1xjlb5pu" path="res://images/rect_inactive.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b4icmscmu84f3" path="res://images/backspace-icon.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b5io3qm4lcaqr" path="res://images/arrow-right.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bxsosqtnx2elr" path="res://images/arrow-left.png" id="10"]

[sub_resource type="BoxMesh" id="2"]

[sub_resource type="CylinderMesh" id="7"]
top_radius = 0.2
bottom_radius = 0.1
height = 4.0
radial_segments = 16

[sub_resource type="CylinderMesh" id="9"]
top_radius = 0.1
radial_segments = 16

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
nlp_server_url = "http://127.0.0.1:5000"
icon_del = ExtResource("8")
icon_prev = ExtResource("10")
icon_next = ExtResource("9")
active_group = "bottom"
active_button_bottom_grid_index = 1

[node name="HBoxContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(1152, 0)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 42
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("6")
active_texture = ExtResource("5")
inactive_texture = ExtResource("7")
is_active = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0

[node name="TextSuggestions" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 86)
layout_mode = 2
texture = ExtResource("5")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("6")
active_texture = ExtResource("5")
inactive_texture = ExtResource("7")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -13.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect2/MarginContainer"]
layout_mode = 2
script = ExtResource("4")

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/NinePatchRect2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 8

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Tip: Pumili ng letra  o salita para mahulaan ang susunod na salita."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Buttontest" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Test"

[node name="Panel" type="Panel" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(230, 0)
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/Panel/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(220, 230)
size_2d_override_stretch = true
render_target_update_mode = 0

[node name="Node3D" type="Node3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.11381)

[node name="MeshInstance3D" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D"]
visible = false
mesh = SubResource("2")

[node name="MeshInstance2" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.27582)
mesh = SubResource("2")

[node name="Arrows" type="Node3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0.863242)

[node name="AccelerometerArrow" type="Node3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/AccelerometerArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("7")

[node name="Top" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/AccelerometerArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("9")

[node name="MagnetoArrow" type="Node3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/MagnetoArrow"]
transform = Transform3D(1, 3.55271e-15, -1.77636e-15, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 2, 4.76837e-07)
mesh = SubResource("7")

[node name="Top" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/MagnetoArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("9")

[node name="NorthArrow" type="Node3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="Bottom" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/NorthArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("7")

[node name="Top" type="MeshInstance3D" parent="HBoxContainer/Panel/SubViewportContainer/SubViewport/Node3D/Arrows/NorthArrow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
mesh = SubResource("9")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="TimerPressButton" type="Timer" parent="."]
one_shot = true

[connection signal="text_changed" from="HBoxContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttontest" to="." method="_on_Buttontest_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerPressButton" to="." method="_on_TimerPressButton_timeout"]
